user-interface/deployments/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
        containers:
        - name: ui-service
          image: eu.gcr.io/my-project-tattoor/user-interface:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 80
            name: ui
