user-interface/deployments/service-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: ui-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: ui
