user-interface/deployments/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ui-svc
          servicePort: 80
      - path: /rpc
        backend:
          serviceName: api-getway-svc
          servicePort: 8080
